fix container padding on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -877,6 +877,7 @@ body {
 
   @media (max-width: $screen-sm-max) {
     padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 
@@ -1233,7 +1234,7 @@ body {
   padding-bottom: 150px;
 
   @media (max-width: $screen-sm-max) {
-    padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 
@@ -1365,7 +1366,7 @@ body {
   padding-bottom: 150px;
 
   @media (max-width: $screen-sm-max) {
-    padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 
